# ChangeLog for x11-libs/gtksourceview
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.286 2015/04/12 22:05:20 eva Exp $

*gtksourceview-3.14.4 (12 Apr 2015)

  12 Apr 2015; Gilles Dartiguelongue <eva@gentoo.org>
  +gtksourceview-3.14.4.ebuild:
  Version bump. Fixes search related crash.

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gtksourceview-3.14.3.ebuild:
  x86 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gtksourceview-3.14.3.ebuild:
  ppc64 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gtksourceview-3.14.3.ebuild:
  ppc stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> gtksourceview-3.14.3.ebuild:
  amd64 stable, bug 534012

*gtksourceview-3.14.3 (24 Jan 2015)

  24 Jan 2015; Pacho Ramos <pacho@gentoo.org> +gtksourceview-3.14.3.ebuild,
  -gtksourceview-3.12.2.ebuild, -gtksourceview-3.14.2.ebuild:
  Version bump, drop old

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gtksourceview-3.12.3.ebuild:
  Stable for alpha, wrt bug #529964

  01 Jan 2015; Markus Meier <maekke@gentoo.org> gtksourceview-3.12.3.ebuild:
  arm stable, bug #529964

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gtksourceview-3.12.3.ebuild:
  Stable for sparc, wrt bug #529964

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> gtksourceview-3.12.3.ebuild:
  Stable for ia64, wrt bug #529964

  30 Dec 2014; Agostino Sarubbo <ago@gentoo.org> gtksourceview-3.12.3.ebuild:
  Stable for ppc64, wrt bug #529964

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> gtksourceview-3.12.3.ebuild:
  Stable for ppc, wrt bug #529964

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> gtksourceview-3.12.3.ebuild:
  amd64 stable, bug 529964

  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> gtksourceview-3.12.3.ebuild:
  x86 stable, bug 529964

*gtksourceview-3.14.2 (15 Dec 2014)

  15 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org>
  +gtksourceview-3.14.2.ebuild: