@@ -9,15 +9,16 @@ DIST gtksourceview-3.12.3.tar.xz 1195836 SHA256 f31959a21a93a929ff15192287096e65
 DIST gtksourceview-3.14.3.tar.xz 1257420 SHA256 7bbe8b603ed7346669911fa074fe69388a4c89c1b15317befc3aa212b3d01a7b SHA512 d9f36d312adff7560beb8fe443dabe0f8dae6f02abfbdabcc4b2c97388601cd4fec0100825ad0460dbff30e6a01bcc8376ab80772013fb56ef0c192006d90eab WHIRLPOOL 5846452197ab238a3e49c5d09435dd4d49afe1a4781c08b4481dc3dcdac25ba9cf7b8c2ee9e69641b6d8f1bd0e88ab1847b357b536a6381b2bb1d36a41d41b20
 DIST gtksourceview-3.14.4.tar.xz 1262660 SHA256 1c9d6155705d50ae5cd1cd61167cc4824e413896f10d30ee158a83e8961a4d8b SHA512 37fac60ccbeab60633044abdcfff5a37a161d4352c895c9a577a7cfb95328afff65841b759ced04953da849b0dfc60c3765e6ea186fbc89447973c92adda0b88 WHIRLPOOL 3d8d2e38dcaf07f4988a1cf0712ddbdf43b36861f41622358c9ae58f9cd8fbe541f42d2bba8772f8b2427b356ed558cd32520e81dc38dbbd86fe73b344cd265e
 EBUILD gtksourceview-2.10.5-r2.ebuild 1867 SHA256 4d2893a823261005ef47b1217c7adf72b7fa04adc1afe8a090a55d0fd8a67d94 SHA512 e62cf4c36994f2d2a645ecaf439695aa3f5c678bfc5b4015696742683241da8ae18076a00351d9e45311e04ff87ed9692113b2b8bdf946fa08828d2641f69ab0 WHIRLPOOL c97036c8f603ba1b86060f1f5c3e9145672417d2368cff87000298c56449c6539c84c97f23bd8a1157a36e655f2c6fd5c878aa7d08cbd48b625d0a217bc42ab8
+EBUILD gtksourceview-2.10.5-r3.ebuild 1566 SHA256 52d539acded1e4e817a191c726fea9526df55cb8a8ea8e652c47201b6edb0b6b SHA512 7d6c01f592c6d42417a45196179ea963d7381e1065b0419dd5bbefb7a98d065c4ffcff5e9da7c755770261b6ad0cd4dd1160f849291ab3609f55e7efef00c956 WHIRLPOOL ea58bf56e1cb7b7b3f87226351984345056c0d42680e8769a0f2f2dea5b77f2fa8cf690fec6941cbf1614fb426b22644dd8c4162b3840e55adfc279475dd8483
 EBUILD gtksourceview-3.12.3.ebuild 1378 SHA256 acf67cb9474ce714fb6867dcc60b5815103d23fb8764e18f24191dbb2d1b7a88 SHA512 37ff0cd815512f516a849a434b94142e49c4e7b05564f8c01c7f5685e93fdaaa3b3dd02717f5dc9d76be80c8dfb9229738c6d20daa80cf0a0d451ec5d4bead75 WHIRLPOOL 34cec72841f5950b23d5b75e5f24fb5cc66b75e3a2f85eb11763dc8125e5e1347a1383f4b0bc98bbfe2f0f37289b06468b48cc7dc8c102661e7155d377f2ec37
 EBUILD gtksourceview-3.14.3.ebuild 1606 SHA256 79d7ff55e2ce39aedc632f5147fe8656b8bdb21e52432afce324afb0628b7dbf SHA512 7d982287e5212908288fafb0b2925453f6b0d079cda5c739874168b583d733b21e5fe55330eb1ca7f798837884dbcfdb527d2be6b533de58698e62a0515ca8e5 WHIRLPOOL 1e16f7fcf159025566a75840753137e29da1c7c6d35336c24d6d7e6802ed7633702df50e27291fa250f999ab69a39d673fcd48b7b55875a18d575bfbb85c8bdf
 EBUILD gtksourceview-3.14.4.ebuild 1608 SHA256 a514cb434a2395c7ce7d98a801969ef79470cc38ffa29376c278933cd5875c00 SHA512 83066da69836008d19fd585ca9b5361c8c2ab2c20ef6de7a002b8fedd8c69c29f6dae75d41553b0a030098b14ab0dd4583f10362c81aec9dd541fcd3e5df1b00 WHIRLPOOL cc33a11965966d13053b6a8ba4de8fcfb68088a91407e7d6cf8316864076786c0a925f73117ff5ad8e928abf129681de043e090e0648f971e971a2dc6545f7f6
-MISC ChangeLog 38846 SHA256 683fd51956b210649b64e58114c45c20526ebc56032dfec05e2c684d689051bb SHA512 217254a5f70619b4052e6d381b0cde7e392ee3ae71150a4f8c9c085f41de7b040917c685ef84826a227fe1ff71810b6d3ff8dbf4e1487e4878f8b708842a2cdf WHIRLPOOL aa02e4aa91c37f138b998f1644f35499f30a229961cddb4eb2188cff5e72362c7cf745d77c9a2e91ce3b56caefc9dcb08e3680e7bbda27e5cff81085e21e7358
+MISC ChangeLog 39008 SHA256 bd9ce86f60a2beea39e2b27de3ac94b503eb4236097285dbaf8e37de707f0e72 SHA512 04506540cf1f9b8dd5afce478ee9e82ea410bb5bd536f8aab5736752fdc4dd84ee4c413054ba74bc0a36aeea60c2d5abb1b4deafa0644471889a12eb0c19739a WHIRLPOOL a7ed7c08d21dc90c3916421fc160aec70478553873f9e521366b9d0e099a8e3dc2b3444418b01316f6d1055a6b3e775456677b7d1c80c0a77bb786311e97a94c
 MISC metadata.xml 227 SHA256 acf49718ac71aa3c7bfc3da7369c982c571f85885ef7cb787f5449049bf7a358 SHA512 ef662434f41abe6311571701ffa1dbadd0696e221c04c1e9bf54b48145083f940356a62d32b2af94cb64461e63e93cf0f9f8d454173edd940d7c9a47e834f721 WHIRLPOOL 43b6dc1bd6304afdb47215f375fc1dde8e8fdc2efca7ad8db6b5c4bae3b88f11569d6b5d3cb63841fe044e2921999aedd55e672d59ab302d8a561e6f037edb60
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUq7CEACgkQ1fmVwcYIWAZSMgCgiVvGBhf6NVFGLTv1VzjVGVut
-rK8AmgPR5Sqn7YU/NCnZ0xBjG3rInFNW
-=lDhQ
+iEYEAREIAAYFAlVy7q0ACgkQCaWpQKGI+9TFwQCdHDIYDhzmTq0KKwmBVxL/m472
+sPcAn2VZp9jEjlL7ZmUKH6QDWq2DTydk
+=6WJN
 -----END PGP SIGNATURE-----
